--- a/online-zoo/assets/sass-css/base/typography.scss
+++ b/online-zoo/assets/sass-css/base/typography.scss
@@ -3,13 +3,13 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('../../assets/fonts/Roboto/roboto-v30-latin-300.eot'); /* IE9 Compat Modes */
+  src: url('../../fonts/Roboto/roboto-v30-latin-300.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../assets/fonts/Roboto/roboto-v30-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-300.woff') format('woff'), /* Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../fonts/Roboto/roboto-v30-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-300.woff') format('woff'), /* Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-300.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-regular - latin */
 @font-face {
@@ -18,11 +18,11 @@
   font-weight: 400;
   src: url('../../fonts/Roboto/roboto-v30-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../assets/fonts/Roboto/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../fonts/Roboto/roboto-v30-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-500 - latin */
 @font-face {
@@ -31,11 +31,11 @@
   font-weight: 500;
   src: url('../../fonts/Roboto/roboto-v30-latin-500.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../assets/fonts/Roboto/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-500.woff') format('woff'), /* Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../fonts/Roboto/roboto-v30-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-500.woff') format('woff'), /* Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-500.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 /* roboto-700 - latin */
 @font-face {
@@ -44,11 +44,11 @@
   font-weight: 700;
   src: url('../../fonts/Roboto/roboto-v30-latin-700.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../assets/fonts/Roboto/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-700.woff') format('woff'), /* Modern Browsers */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../assets/fonts/Roboto/roboto-v30-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../fonts/Roboto/roboto-v30-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('../../fonts/Roboto/roboto-v30-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../fonts/Roboto/roboto-v30-latin-700.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
 $base-font-family: 'Roboto', sans-serif;
@@ -75,12 +75,14 @@ $base-font-family: 'Roboto', sans-serif;
   font-size: 24px;
   font-weight: 400;
   line-height: 120%;
+
 }
 
-%font-button{
+%font-button {
   font-size: 16px;
   font-weight: 500;
   line-height: 140%;
+  text-transform: uppercase;
 }
 
 %font-regular {
