--- a/online-zoo/assets/sass-css/base/buttons.scss
+++ b/online-zoo/assets/sass-css/base/buttons.scss
@@ -1,10 +1,24 @@
 @import "typography";
+@import "colors";
+
 
 %button-default {
   width: 298px;
   height: 54px;
   border-radius: 25px;
   display: block;
-  text-transform: none;
+  text-decoration: none;
+  color: white;
+}
 
+%button-hover {
+  background: $orange-hover;
+}
+
+%button-active {
+  background: $green;
+}
+
+%button-disables {
+  background: $gray;
 }
