--- a/online-zoo/assets/sass-css/pages/main-page.css
+++ b/online-zoo/assets/sass-css/pages/main-page.css
@@ -30,11 +30,29 @@
   src: url("../../fonts/Roboto/roboto-v30-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""), url("../../fonts/Roboto/roboto-v30-latin-700.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto/roboto-v30-latin-700.woff2") format("woff2"), url("../../fonts/Roboto/roboto-v30-latin-700.woff") format("woff"), url("../../fonts/Roboto/roboto-v30-latin-700.ttf") format("truetype"), url("../../fonts/Roboto/roboto-v30-latin-700.svg#Roboto") format("svg"); /* Legacy iOS */
 }
-.button-watch a {
+.backstage-text h2 {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.backstage-text h4 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.button-watch .watch-link {
   font-size: 16px;
   font-weight: 500;
   line-height: 140%;
   text-transform: uppercase;
+}
+
+.backstage-text .goals, .backstage-text .about-site {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
 }
 
 /* roboto-300 - latin */
@@ -69,25 +87,53 @@
   src: url("../../fonts/Roboto/roboto-v30-latin-700.eot"); /* IE9 Compat Modes */
   src: local(""), url("../../fonts/Roboto/roboto-v30-latin-700.eot?#iefix") format("embedded-opentype"), url("../../fonts/Roboto/roboto-v30-latin-700.woff2") format("woff2"), url("../../fonts/Roboto/roboto-v30-latin-700.woff") format("woff"), url("../../fonts/Roboto/roboto-v30-latin-700.ttf") format("truetype"), url("../../fonts/Roboto/roboto-v30-latin-700.svg#Roboto") format("svg"); /* Legacy iOS */
 }
-.button-watch a {
+.backstage-text h2 {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.backstage-text h4 {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.button-watch .watch-link {
   font-size: 16px;
   font-weight: 500;
   line-height: 140%;
   text-transform: uppercase;
 }
 
-.button-watch a {
+.backstage-text .goals, .backstage-text .about-site {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 140%;
+}
+
+.button-watch .watch-link {
   width: 298px;
   height: 54px;
   border-radius: 25px;
   display: block;
-  text-transform: none;
+  text-decoration: none;
+  color: white;
+}
+
+.button-watch .watch-link:hover {
+  background: #E47209;
+}
+
+.button-watch .watch-link:active {
+  background: #4B9200;
 }
 
 .page {
   width: 100vw;
   height: 100vh;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
 }
 
 .container {
@@ -108,6 +154,12 @@
 .header .container .logo {
   font-family: "Roboto";
   width: 82px;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border: 1px solid white;
 }
 .header .container .logo h1 {
   width: 72.49px;
@@ -116,18 +168,14 @@
   line-height: 120%;
   color: #FFFFFF;
   padding: 3.55px 5px;
-  border: 1px solid #FFFFFF;
   border-radius: 2px;
   text-align: center;
-}
-.header .container .logo h1 span {
-  position: relative;
 }
 
 .bamboo {
   position: absolute;
   left: 11.23px;
-  top: 24.64px;
+  top: 23.64px;
 }
 .bamboo img {
   height: 20.98px;
@@ -142,12 +190,18 @@
 .nav-list {
   padding: 0;
   display: flex;
-  gap: 59px;
+  gap: 58px;
   list-style: none;
+}
+.nav-list .nav-item .active {
+  color: #F9804B;
 }
 .nav-list .nav-item a {
   color: #FFFFFF;
   text-decoration: none;
+}
+.nav-list .nav-item a:hover {
+  color: #F9804B;
 }
 
 .watch-online {
@@ -188,10 +242,50 @@
 
 .wrapper {
   margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-.button-watch a {
+.button-watch {
+  margin-top: 69px;
+  margin-right: 98px;
+}
+.button-watch .watch-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
   background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+}
+.active {
+  color: #F9804B;
+}
+
+.backstage {
+  height: 605px;
+  background: no-repeat right url("../../images/flower-photo-1.png");
+  display: flex;
+  justify-content: center;
+}
+.backstage .instructions {
+  margin-top: 140px;
+  display: flex;
+  gap: 87px;
+}
+
+.backstage-text {
+  color: #333B41;
+}
+.backstage-text .about-site {
+  margin-top: 20px;
+  line-height: 130%;
+}
+.backstage-text h4 {
+  margin-top: 54px;
+}
+.backstage-text .goals {
+  margin-top: 34px;
 }
 
 /*# sourceMappingURL=main-page.css.map */
