--- a/online-zoo/assets/sass-css/pages/main-page.css
+++ b/online-zoo/assets/sass-css/pages/main-page.css
@@ -267,6 +267,7 @@
   background: no-repeat right url("../../images/flower-photo-1.png");
   display: flex;
   justify-content: center;
+  margin-bottom: 106px;
 }
 .backstage .instructions {
   margin-top: 140px;
@@ -286,6 +287,22 @@
 }
 .backstage-text .goals {
   margin-top: 34px;
+}
+
+.pets {
+  display: flex;
+  justify-content: center;
+}
+.pets .button {
+  width: 52px;
+  height: 52px;
+  background-color: #F9804B;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 10px;
 }
 
 /*# sourceMappingURL=main-page.css.map */
