--- a/online-zoo/assets/sass-css/base/buttons.scss
+++ b/online-zoo/assets/sass-css/base/buttons.scss
@@ -6,9 +6,12 @@
   width: 298px;
   height: 54px;
   border-radius: 25px;
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: white;
+  text-transform: uppercase;
 }
 
 %button-hover {
