--- a/online-zoo/assets/sass-css/pages/main-page.scss
+++ b/online-zoo/assets/sass-css/pages/main-page.scss
@@ -171,16 +171,31 @@
 
 .backstage {
   height: 605px;
-  background: no-repeat right url("../../images/flower-photo-1.png");
+  background: no-repeat calc(100% + 27px) url("../../images/flower-photo-1.png");
+  background-position-y: 15px;
   display: flex;
   justify-content: center;
-  margin-bottom: 106px;
+
 
   .instructions {
     margin-top: 140px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 609px 1fr;
     gap: 87px;
   }
+}
+
+.backstage-img {
+  overflow: hidden;
+  width: 609px;
+
+    .bamboo-hat {
+      transition: 0.5s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
 }
 
 .backstage-text {
@@ -213,10 +228,13 @@
 
   display: flex;
   justify-content: center;
+  margin-top: 115px;
+  background: no-repeat calc(100% + 27px) bottom url("../../images/strelitzia.png"),
+  no-repeat -22px bottom url("../../images/palm-photo.png");
 
   .button {
-    width: 52px;
-    height: 52px;
+    width: 62px;
+    height: 62px;
     background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
     color: $white;
     display: flex;
@@ -224,6 +242,15 @@
     align-items: center;
     border-radius: 50%;
     font-size: 10px;
+
+    &:hover {
+      @extend %button-hover;
+      cursor: pointer;
+    }
+
+    &:active {
+      @extend %button-active;
+    }
   }
 }
 
@@ -234,18 +261,44 @@
   column-gap: 30px;
 
     .card-item {
-      height: 426px;
       display: flex;
       flex-direction: column;
       border: 1px solid $orange;
       border-radius: 3px;
-
-        .card-img {
-          height: 366px;
-          width: 366px;
-        }
+      overflow: hidden;
     }
 }
+.card-img {
+  height: 366px;
+  width: 366px;
+  background-size: contain;
+  transition: .5s;
+
+  &:hover {
+    transform: scale(1.1);
+
+  }
+}
+
+.card-1 {
+  background: no-repeat center url("../../images/pets-block/pandas.png");
+}
+.card-2 {
+  background: no-repeat center url("../../images/pets-block/eagle.png");
+}
+.card-3 {
+  background: no-repeat center url("../../images/pets-block/gorilla.png");
+}
+.card-4 {
+  background: no-repeat center url("../../images/pets-block/sloth.png");
+}
+.card-5 {
+  background: no-repeat center url("../../images/pets-block/cheetahs.png");
+}
+.card-6 {
+  background: no-repeat center url("../../images/pets-block/penguin.png");
+}
+
 
 .text {
   .type {
@@ -274,6 +327,7 @@
   @extend %button-default;
   background-color: $orange-darker;
   margin-top: 80px;
+  margin-bottom: 100px;
 
     &:hover {
       @extend %button-hover;
@@ -290,16 +344,18 @@
   align-items: center;
 }
 
+.button-choose-pet {
+  display: flex;
+  justify-content: center;
+}
 
+.cards-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
 
-
-
-
-
-
-
-
-
-
-
+.pick-feed {
+  height: 500px;
+}
 
